--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
-*/config/development
-*/logs/log-*.php
-*/logs/!index.html
-*/cache/*
-*/cache/!index.html
-*/cache/!.htaccess
+application/config/development
+application/logs/log-*.php
+application/logs/!index.html
+application/cache/*
+application/cache/!index.html
+application/cache/!.htaccess
+userguide/
